Did a mini fix on mobile resizing

--- a/mediaQueries.css
+++ b/mediaQueries.css
@@ -747,8 +747,8 @@
     }
     
     #logoImg { 
-        left: 5;
-        top: 11;
+        left: 6;
+        top: 24;
         width: 10.9%; 
         height: 6.6%;}
     .header { height: 12%; }
@@ -800,7 +800,7 @@
     
     #logoImg { 
         left: 15;
-        top: 12;
+        top: 25;
         width: 8.6%; 
         height: 5.6%;}
     .header { height: 12%; }
@@ -895,7 +895,7 @@
 
 @media screen and (max-height: 540px) {
     body { height: 540px; position: relative; }
-    #logoImg { position: fixed; height: 55px; }
+    #logoImg { position: absolute; height: 55px; }
 }
 
 @media screen and (max-height: 540px) and (min-width: 901px) {
